--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,10 +1,5 @@
-/알고리즘/
-<<<<<<< HEAD
-/자료구조/
-/sw_expert_academy/
-/jungol/
 /backjoon/
-=======
->>>>>>> 935bf89da9220f22cd63a883e4aafb2cff611968
-/PRO검정/
+/jungol/
+/solvedAC/
+/sw_expert_academy/
 /sw검정/
